Fix shape behind artist name on cards

--- a/dev/wp-content/themes/saint-leonart/sources/sass/components/_card.scss
+++ b/dev/wp-content/themes/saint-leonart/sources/sass/components/_card.scss
@@ -11,6 +11,7 @@
      margin-bottom: 2.5em;
      text-decoration: none;
      color: $textColor;
+     cursor: pointer;
      &__figure {
          width: 100%;
          height: 17.5em;
@@ -24,9 +25,10 @@
      &__title {
          position: relative;
          margin-bottom: .5em;
+         height: 2em;
          &--shape {
             position: absolute;
-            z-index: -1;
+            z-index: 1;
             top: -10px;
             left:-8px;
          }
@@ -34,6 +36,12 @@
             font-family: $titles;
             font-size: $title;
             z-index: 2;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+
          }
      }
      &__subtitle {
